RESOLVED FIXED240661
[GStreamer] REGRESSION(r288092): Deadlock when the playback is stopping just right after startup
https://bugs.webkit.org/show_bug.cgi?id=240661
Summary [GStreamer] REGRESSION(r288092): Deadlock when the playback is stopping just ...
Yacine Bandou
Reported 2022-05-19 09:43:25 PDT
r288092 causes a deadlock with the "28. ChangeType.H264.VP9" test in "https://ytlr-cert.appspot.com/2020/main.html". The background thread locks the GStPad and sends a notify::caps signal which is caught by VideoTrackPrivateGStreamer that calls callOnMainThreadAndWait. At the same time the main thread destroys MediaPlayerPrivateGStreamer and sets the pipeline to NULL that calls "gst_pad_set_active" which wants to lock the GStPad. See https://bugs.webkit.org/show_bug.cgi?id=234084
Attachments
Patch (9.58 KB, patch)
2022-05-19 09:57 PDT, Yacine Bandou
no flags
Patch (11.36 KB, patch)
2022-05-19 10:15 PDT, Yacine Bandou
no flags
Patch (9.16 KB, patch)
2022-05-19 14:32 PDT, Yacine Bandou
no flags
Yacine Bandou
Comment 1 2022-05-19 09:57:23 PDT
Yacine Bandou
Comment 2 2022-05-19 10:15:11 PDT
Philippe Normand
Comment 3 2022-05-19 10:39:35 PDT
Comment on attachment 459598 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=459598&action=review > Source/WebCore/ChangeLog:1 > +2022-05-19 Yacine Bandou <yacine.bandou@softathome.com> We don't use ChangeLogs anymore. Please remove this :)
Yacine Bandou
Comment 4 2022-05-19 14:32:14 PDT
EWS
Comment 5 2022-05-20 01:47:15 PDT
Committed r294537 (250792@main): <https://commits.webkit.org/250792@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 459603 [details].
Radar WebKit Bug Importer
Comment 6 2022-05-20 01:48:14 PDT
Note You need to log in before you can comment on or make changes to this bug.